Configuração do JDBI, criação de classes e interfaces de service e repository e implementação do método de cadastrar veículo.
